@@ -5,18 +5,19 @@ import com.baomidou.mybatisplus.core.conditions.update.LambdaUpdateWrapper;
 import com.baomidou.mybatisplus.extension.service.impl.ServiceImpl;
 import com.queryx.recruiting_website.constant.AppHttpCodeEnum;
 import com.queryx.recruiting_website.constant.Common;
+import com.queryx.recruiting_website.domain.LoginAdmin;
 import com.queryx.recruiting_website.domain.TPMenu;
 import com.queryx.recruiting_website.domain.TPRoleMenu;
-import com.queryx.recruiting_website.domain.dto.MenuDTO;
-import com.queryx.recruiting_website.domain.dto.UpdateMenuDTO;
+import com.queryx.recruiting_website.domain.dto.MenuDto;
+import com.queryx.recruiting_website.domain.dto.UpdateMenuDto;
 import com.queryx.recruiting_website.domain.vo.MenuListVO;
+import com.queryx.recruiting_website.domain.vo.MenuVO;
 import com.queryx.recruiting_website.domain.vo.RoutersVO;
 import com.queryx.recruiting_website.exception.SystemException;
 import com.queryx.recruiting_website.mapper.TPMenuMapper;
 import com.queryx.recruiting_website.mapper.TPRoleMenuMapper;
 import com.queryx.recruiting_website.service.TPMenuService;
 import com.queryx.recruiting_website.service.TPRoleMenuService;
-import com.queryx.recruiting_website.domain.vo.MenuVO;
 import com.queryx.recruiting_website.utils.SecurityUtils;
 import jakarta.annotation.Resource;
 import org.springframework.beans.BeanUtils;
@@ -39,9 +40,16 @@ public class TPMenuServiceImpl extends ServiceImpl<TPMenuMapper, TPMenu> impleme
 
     @Override
     public RoutersVO getRouter() {
-        // menu结果是tree的形式
-        List<TPMenu> menus = selectRouterMenuTreeByRoleId(SecurityUtils.getLoginAdmin().getTdAdmin().getRoleId());
+        Object principal = SecurityUtils.getAuthentication().getPrincipal();
         RoutersVO routersVO = new RoutersVO();
+        Long roleId;
+        if (principal instanceof LoginAdmin) {
+            roleId = SecurityUtils.getLoginAdmin().getTdAdmin().getRoleId();
+        } else {
+            roleId = Long.valueOf(SecurityUtils.getLoginUser().getTdUser().getUserRole());
+        }
+        // menu结果是tree的形式
+        List<TPMenu> menus = selectRouterMenuTreeByRoleId(roleId);
         List<MenuVO> menuVOList = menus.stream()
                 .map(m -> {
                     MenuVO menuVO = new MenuVO();
@@ -56,27 +64,37 @@ public class TPMenuServiceImpl extends ServiceImpl<TPMenuMapper, TPMenu> impleme
                             .collect(Collectors.toList()));
                     return menuVO;
                 })
-                .collect(Collectors.toList());
+                .toList();
         routersVO.setMenus(menuVOList);
         return routersVO;
     }
 
     @Override
-    public List<MenuListVO> menuList(String status, String menuName) {
+    public List<MenuListVO> menuList() {
         LambdaQueryWrapper<TPMenu> wrapper = new LambdaQueryWrapper<>();
-        wrapper.like(menuName != null, TPMenu::getMenuName, menuName)
-                .eq(status != null, TPMenu::getStatus, status)
-                .eq(TPMenu::getDelFlag,Common.NOT_DELETE)
+        wrapper.eq(TPMenu::getDelFlag, Common.NOT_DELETE)
                 .orderByAsc(TPMenu::getParentId, TPMenu::getOrderNum);
-        return list(wrapper).stream().map(menu -> {
-            MenuListVO menuListVO = new MenuListVO();
-            BeanUtils.copyProperties(menu, menuListVO);
-            return menuListVO;
-        }).toList();
+        List<TPMenu> list = list(wrapper);
+
+        return buildMenuTreeVO(list, 0L);
     }
 
+
+    private List<MenuListVO> buildMenuTreeVO(List<TPMenu> menuList, Long parentId) {
+        return menuList.stream()
+                .filter(menu -> menu.getParentId().equals(parentId))
+                .map(menu -> {
+                    MenuListVO menuVO = new MenuListVO();
+                    BeanUtils.copyProperties(menu, menuVO);
+                    menuVO.setChildren(buildMenuTreeVO(menuList, menu.getMenuId()));
+                    return menuVO;
+                })
+                .collect(Collectors.toList());
+    }
+
+
     @Override
-    public Object addMenu(MenuDTO menu) {
+    public Object addMenu(MenuDto menu) {
         TPMenu tpMenu = new TPMenu();
         BeanUtils.copyProperties(menu, tpMenu);
         tpMenu.setCreateBy(SecurityUtils.getLoginAdmin().getTdAdmin().getAdminId());
@@ -91,7 +109,7 @@ public class TPMenuServiceImpl extends ServiceImpl<TPMenuMapper, TPMenu> impleme
     public MenuListVO menuInfo(Long menuId) {
 
         TPMenu menu = getById(menuId);
-        if ((menu.getParentId().equals(Common.ROOT_MENU) || menu.getParentId().equals(Common.PARENT_MENU))) {
+        if ((menu.getParentId().equals(Common.ROOT_MENU) || menu.getParentId().equals(Long.valueOf(Common.PARENT_MENU)))) {
             throw new SystemException(AppHttpCodeEnum.NO_UPDATE);
         }
         MenuListVO menuListVO = new MenuListVO();
@@ -100,7 +118,7 @@ public class TPMenuServiceImpl extends ServiceImpl<TPMenuMapper, TPMenu> impleme
     }
 
     @Override
-    public Object updateMenu(UpdateMenuDTO menu) {
+    public Object updateMenu(UpdateMenuDto menu) {
         LambdaUpdateWrapper<TPMenu> wrapper = new LambdaUpdateWrapper<>();
         wrapper.eq(TPMenu::getMenuId, menu.getMenuId());
         TPMenu tpMenu = new TPMenu();
@@ -116,11 +134,6 @@ public class TPMenuServiceImpl extends ServiceImpl<TPMenuMapper, TPMenu> impleme
 
     @Override
     public Object delMenu(Long menuId) {
-        TPMenu menu = getById(menuId);
-        if ((menu.getParentId().equals(Common.ROOT_MENU) || menu.getParentId().equals(Common.PARENT_MENU))) {
-            throw new SystemException(AppHttpCodeEnum.NO_UPDATE);
-        }
-
         LambdaUpdateWrapper<TPMenu> wrapper = new LambdaUpdateWrapper<>();
         wrapper.eq(TPMenu::getMenuId, menuId)
                 .set(TPMenu::getDelFlag, Common.DELETE);
@@ -131,9 +144,10 @@ public class TPMenuServiceImpl extends ServiceImpl<TPMenuMapper, TPMenu> impleme
     public List<TPMenu> selectRouterMenuTreeByRoleId(Long roleId) {
         List<TPMenu> menuList = null;
         LambdaQueryWrapper<TPMenu> wrapper = new LambdaQueryWrapper<>();
-        wrapper.eq(TPMenu::getStatus, Common.STATUS_ENABLE);
-        wrapper.in(TPMenu::getMenuType, "C", "M");
-        wrapper.orderByAsc(TPMenu::getOrderNum);
+        wrapper.eq(TPMenu::getStatus, Common.STATUS_ENABLE)
+                .eq(TPMenu::getDelFlag, Common.NOT_DELETE)
+                .in(TPMenu::getMenuType, "C", "M", "U")
+                .orderByAsc(TPMenu::getOrderNum);
 
         // 判断是否是超级管理员
         if (roleId.equals(Common.SUPER_ADMIN)) {
@@ -148,7 +162,8 @@ public class TPMenuServiceImpl extends ServiceImpl<TPMenuMapper, TPMenu> impleme
         }
 
         // 得到树形结构
-        return builderMenuTree(menuList, 0L);
+        List<TPMenu> menuTree = builderMenuTree(menuList, 0L);
+        return menuTree;
     }
 
     private List<TPMenu> builderMenuTree(List<TPMenu> menuList, Long parentId) {
